--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -7,141 +7,157 @@ permalink: "components/lists.html"
 
 
 
-<h1 class="mt-lg-0">Lists (Bulleted &amp; Expanding)</h1>
-<div class="row">
- <div class="half">
-  <h2>.list-overstated</h2>
-  <p>Adding <code>.list-overstated</code> to a <code>ul</code> will render the list with bullet
-   icons and bold hyperlinks.</p>
-  {% include "../../src/_includes/modules/list-overstated.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for List Overstated">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/list-overstated.html" %}</code></pre>
- </div>
-</div>
+<h1 class="mt-lg-0">Lists</h1>
+<p>A list is a vertical grouping of related content. They are typically bulleted or numbered.</p>
 
-<hr>
-
-<div class="row">
- <div class="half">
-  <h2>.list-understated</h2>
-  <p>Adding <code>.list-understated</code> to a <code>ul</code> will render the list with bullet
-   icons and normal weighted hyperlinks.</p>
-  {% include "../../src/_includes/modules/list-understated.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for List Understated">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/list-understated.html" %}</code></pre>
- </div>
-</div>
-
-<hr>
-
-<div class="row">
- <div class="half">
-  <h2>.list-standout</h2>
-  <p>Adding <code>.list-standout</code> to a <code>ul</code> will render the list with large
-   inward pointing arrows.</p>
-  {% include "../../src/_includes/modules/list-standout.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for List Standout">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/list-standout.html" %}</code></pre>
- </div>
-</div>
-
-<hr>
-
-<div class="row">
- <div class="half">
-  <h2>List as Accordion</h2>
-
-  <p>Accordion lists can be toggled open and close by clicking the toggle link. Add id
-   <code>#accordion</code> and class <code>.accordion-list</code> to a <code>ul</code> to
-   create the accordion list. Add <code>.tab</code> to the <code>li</code> tag. Finally, wrap
-   the content to be toggled open and closed in a <code>.card</code> div. You can use
-   <code>.accordion-list</code> in conjunction with any list style provided.
-  </p>
-
-  <p><span class="text-highlight-primary">Note:</span> Accordion List uses HTML5 roles, some ARIA
-   properties, and IDs for accessibility. For best accessibility paractices certain keyboard
-   shortcuts are also implemented.</p>
-
-  {% include "../../src/_includes/modules/accordion-list.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for Accordion List">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/accordion-list.html" %}</code></pre>
- </div>
-</div>
-
-<hr>
-
-<div class="row">
- <div class="half">
-  <h2>Multi-Tiered Ordered Lists</h2>
-  {% include "../../src/_includes/modules/list-multi-ordered.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for Multi-Tiered Ordered List">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/list-multi-ordered.html" %}</code></pre>
- </div>
-</div>
-
-<hr>
-
-<div class="row">
- <div class="half">
-  <h2>Multi-Tiered Unordered Lists</h2>
-  {% include "../../src/_includes/modules/list-multi-unordered.html" %}
- </div>
- <div class="half">
-  <h2><strong aria-label="Source code for Multi-Tiered Unordered List">Source code:</strong></h2>
-  <pre><code class="overflow-auto">{% include "../../src/_includes/modules/list-multi-unordered.html" %}</code></pre>
- </div>
-</div>
-
-
-<h2 class="step-list">Step list</h2>
-
-<p>The step list is a numbered list. It has:</p>
+<h2 id="Unordered-list">Unordered list</h2>
+<p>Use an unordered list (bulleted) if the order of grouped items does not matter.</p>
 <ul>
- <li>A number for each item in the list, enclosed in a circle</li>
- <li>Lines connecting all the circled numbers</li>
- <li>A title for each step</li>
- <li>Detail for each step
+ <li>Arrange list items in a logical order that makes sense to the audience (such as days of the week).
   <ul>
-   <li>You can use hyperlinks in the detail space</li>
-   <li>You cannot use bullet points in the detail space</li>
+   <li>If a logical order does not apply, then default to alphabetical order.</li>
   </ul>
  </li>
+ <li>For very long lists, where only one option is likely to be chosen (such as “United States” from a list of
+  countries), place the likely option at the top of the list.</li>
+ <li>Generic list items (like “other”) should be placed as the last option on the list.</li>
 </ul>
-<p>State processes can be complicated and opaque. The step list shows all the steps in a process. The step list makes
- these processes visible, even when some steps do not require people to act.</p>
-<h2 id="when-and-how-to-use-it" tabindex="-1">When and how to use it</h2>
-<p>Use the step list when you need more than one sentence to explain the steps in a process.</p>
-<p>Introduce the step list with a heading so people know what process the step list describes. You can add a paragraph
- block between the heading and the step list, but this is optional. Keep this paragraph concise.</p>
-<p>The step list emphasizes important processes. Use it sparingly on your website. If you have a process where most
- steps can be explained in one sentence, use a regular numbered list instead.</p>
-<h3 id="how-not-to-use-it" tabindex="-1">How not to use it</h3>
-<p>Do not use the step list to create a list of items that are not ordered. Use bullet points instead.</p>
-<h2 id="demo-and-sample-markup" tabindex="-1">Demo and sample markup</h2>
-<html-preview>
- <cagov-code-preview data-instructions="">
-  <div class="code-preview">
-   <div class="code-preview-demo">
 
-    {% include "../../src/_includes/modules/step-list.html" %}
 
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
+   <div class="card-header" id="heading-example1">
+    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
+     Example
+    </a>
    </div>
-   <div class="code-block">
-    <h3><label for="sample-accordion-list">Source code:</label></h3>
-    <textarea id="sample-accordion-list" class="form-control" rows="10" cols="80">{% include "../../src/_includes/modules/step-list.html" %}
-                    </textarea>
+   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+    <div class="p-a-md p-b-lg">
 
+     {% include "../../src/_includes/modules/list-unordered.html" %}
+
+
+    </div>
    </div>
   </div>
- </cagov-code-preview>
-</html-preview>
+
+
+
+  <!--HTML-->
+  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
+   <div class="card-header" id="heading-html1">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-unordered.html" %}</code>
+    </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+
+
+
+
+<h2 id="Ordered-list">Ordered list</h2>
+<p>Use an ordered list (numbered or alphabetical) to group a set of related items in a specific order.
+</p>
+<p>Ordered lists use letters or numbers at the beginning of a list in sequential order. They usually start at 1, I, or
+ A.</p>
+<p>The ordered list style is useful for a series of steps where order is important. Your list should contain all the
+ steps in a process so that your reader can complete the task.</p>
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
+   <div class="card-header" id="heading-example3">
+    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
+    <div class="card-body p-b">
+
+     {% include "../../src/_includes/modules/list-ordered.html" %}
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
+   <div class="card-header" id="heading-html3">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-ordered.html" %}</code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+<h2 id="Usage">Usage</h2>
+<h3>When and how to use it</h3>
+<p>Use lists to make blocks of text easier to read, and to break information into manageable chunks.</p>
+<p>Use bulleted lists when you don’t need to convey a specific order for list items.</p>
+<p>Use numbered lists when you need to convey a priority, hierarchy, or sequence between list items.</p>
+<p>Use the step list when you need more than one sentence to explain the steps in a process.</p>
+<h3>How not to use it</h3>
+<p>Do not use the list pattern for a single-step process.</p>
+<p>Do not use Roman numerals, which are not read properly by screen readers.</p>
+
+
+<h2 id="Accessibility">Accessibility</h2>
+{% include "../../src/_includes/modules/accessibility.html" %}
