updated modal component #417

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,17 +41,22 @@ permalink: "about.html"
    <div class="panel-body">
     <ul class="list-standout">
      <li>
-      <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template"
+      <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template"
        target="_blank"><strong>HTML/Dreamwever</strong></a><br>
       This is the standard HTML/Dreamweaver package with sample content
      </li>
      <li>
-      <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template-MVC-v5"
+      <a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-eleventy"
+       target="_blank"><strong>eleventy</strong></a><br>
+      This is the simple and lightweight eleventy package that includes setup instructions
+     </li>
+     <li>
+      <a href="https://github.com/Office-of-Digital-Services/California-State-Template-MVC-v5"
        target="_blank"><strong>.NET(MVC)</strong></a><br>
       This is the .NET MVC package that includes setup instructions
      </li>
      <li>
-      <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template-NET-core"
+      <a href="https://github.com/Office-of-Digital-Services/California-State-Template-NET-core"
        target="_blank"><strong>.NET(Core)</strong></a><br>
       This is the .NET Core package that includes setup instructions
      </li>
