--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -7,7 +7,7 @@ permalink: "components/social-media-icons.html"
 
 
 <h1 class="mt-lg-0">Social media icons</h1>
-
+<p>The social media icons component lets you share your agency’s social media pages with visitors.</p>
 <h2 id="Sample">Sample</h2>
 
 <!--TABS-->
