updated modal container's text #417

--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -56,7 +56,7 @@ permalink: "components/modal.html"
      <div class="section-default">
       <div class="container p-b-lg text-center">
        <button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
-        data-bs-target="#news-headlines">Show Modal</button>
+        data-bs-target="#news-headlines">Open modal</button>
       </div>
      </div>
     </div>
@@ -111,13 +111,13 @@ permalink: "components/modal.html"
  <div class="modal-dialog modal-lg">
   <div class="modal-content">
    <div class="modal-header">
-    <h4 class="modal-title">Modal sample</h4>
+    <h4 class="modal-title">This is the modal container's heading.</h4>
     <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span class="sr-only">Close
       modal</span><span class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
 
    </div>
    <div class="modal-body">
-    Modal body
+    This is the modal container's body.
    </div>
    <div class="modal-footer">
     <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
