--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -4,20 +4,33 @@ landing: Components
 layout: components.njk
 permalink: "components/horizontal-separator.html"
 ---
-
-
-
 <h1 class="mt-lg-0">Horizontal separator</h1>
-<p>Horizontal separator <code>&lt;hr&gt;</code>'s get some styling by default. They will appear as a
- thin 1 pixel gray line. with margins top and bottom.</p>
+<p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
 
 <h2>Default:</h2>
 <hr>
 
-<h2>Dotted Rule</h2>
-<p> Adding a class of <code>.hr-understated</code> to the <code>hr</code> will give you a dotted
- line version of the rorizontal rule.</p>
+<h2>Dotted Rule:</h2>
+<p> Add class <code>.hr-understated</code></p>
 <hr class="hr-understated">
 
+<h2>Usage</h2>
+<p>When and how to use it <br>
+Use the horizontal separator to divide sections of content. This breaks up long pages of text and allows visitors to process your most important message first.
+</p>
+<h3>How not to use it</h3>
+<p>Do not use horizontal separators to build a pseudo table.<br>
+Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy, consider adding headings and removing unnecessary words. </p>
+
 <h2>Source code:</h2>
-<pre><code class="overflow-auto"><hr class="hr-understated"></code></pre>
+<pre><code class="overflow-auto">{% include "../../src/_includes/modules/horizontal-separator.html" %}</code></pre>
+
+<h2>Accessibility</h2>
+<h3>Standard accessibility review</h3>
+<p>Each time a new component version is published:</p>
+<ul>
+  <li>Test with the <a href="https://www.deque.com/axe/">axe accessibility tool</a>.</li>
+  <li>Review with the <a href="https://www.apple.com/voiceover/info/guide/_1121.html">VoiceOver</a> or <a href="https://www.nvaccess.org/download/">NVDA</a> screen reader.</li>
+  <li>Ensure all actionable elements are accessible by keyboard command and tab in a logical order. </li>
+  <li>Check the component layout on a variety of screen sizes.</li>
+</ul>
