updated number counter #416

--- a/pages/updates.html
+++ b/pages/updates.html
@@ -1,6 +1,6 @@
 ﻿---
-title: Template Updates
-landing: What's new
+title: Template updates
+landing: Template updates
 layout: page.njk
 permalink: "updates.html"
 ---
