updated countdown component

--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -1,8 +1,8 @@
 ﻿---
-title: Countdown Timer
+title: Countdown timer
 landing: Components
 layout: components.njk
-permalink: "components/countdown.html"
+permalink: "components/countdown-timer.html"
 ---
 
 
@@ -66,7 +66,7 @@ permalink: "components/countdown.html"
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
     <div class="card-body p-b-lg">
-     <h3>Counrdown default</h3>
+     <h3>Countdown default</h3>
      <div class="row section-default countdown">
       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
        <span class="countdown-text">days<br></span>
